--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ MarkupSafe==2.0.1
 # DB/Storage
 peewee==2.10.2
 peewee-async==0.5.12
-aiopg==1.2.1
+aiopg<1.0.0
 aiomysql==0.0.20
 pymysql==0.9.2
 # apyio==0.2.0
